<resources>
    <string name="app_name">Calculator2</string>
    <string name="clear">C</string>
    <string name="mod">%</string>
    <string name="back">⌫</string>
    <string name="divide">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="double_zero">00</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
</resources>